@@ -23,7 +23,7 @@ default = ["libudev"]
 clap = "2.32"
 
 [target."cfg(unix)".dependencies]
-nix = "0.14.1"
+nix = "0.16.1"
 bitflags = "1.0"
 cfg-if = "0.1"
 
