@@ -6,11 +6,13 @@ The format is based on http://keepachangelog.com/[Keep a Changelog]
 and this project adheres to http://semver.org/[Semantic Versioning].
 
 === [UNRELEASED]
-==== Changed
 ==== Added
 * Added `send_break()` to `TTYPort`
 * Enable `available_ports()` for Linux musl targets and those without the `libudev`
   feature enabled by scanning `/sys/` for ports.
+
+==== Changed
+* Minimum supported Rust version is now 1.36.0 to support the `mem::MaybeUninit` feature.
 
 ==== Fixed
 ==== Removed
